--- a/Pomegranate.html
+++ b/Pomegranate.html
@@ -286,12 +286,12 @@
             <a href="https://wa.me/918780388789" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
           </div>
           <ul class="list-inline text-white">
-              <li class="list-inline-item"><a href="index.html">Home</a></li>
-              <li class="list-inline-item"><a href="index.html#about">About</a></li>
-              <li class="list-inline-item"><a href="index.html#gallery">Gallery</a></li>
-              <li class="list-inline-item"><a href="ceriti.html">Certificate</a></li>
-              <li class="list-inline-item"><a href="index.html#Contact">Contact</a></li>
-          </ul>
+            <li class="list-inline-item"><a href="index.html">Home</a></li>
+            <li class="list-inline-item"><a href="./About.html">About</a></li>
+            <li class="list-inline-item"><a href="./gallery.html">Gallery</a></li>
+            <li class="list-inline-item"><a href="ceriti.html">Certificate</a></li>
+            <li class="list-inline-item"><a href="index.html#Contact">Contact</a></li>
+        </ul>
           <p class="copyright">PRAMUKHEXIM © 2018</p>
       </footer>
   </div>
