--- a/banana.html
+++ b/banana.html
@@ -287,8 +287,8 @@
           </div>
           <ul class="list-inline text-white">
               <li class="list-inline-item"><a href="index.html">Home</a></li>
-              <li class="list-inline-item"><a href="index.html#about">About</a></li>
-              <li class="list-inline-item"><a href="index.html#gallery">Gallery</a></li>
+              <li class="list-inline-item"><a href="./About.html">About</a></li>
+              <li class="list-inline-item"><a href="./gallery.html">Gallery</a></li>
               <li class="list-inline-item"><a href="ceriti.html">Certificate</a></li>
               <li class="list-inline-item"><a href="index.html#Contact">Contact</a></li>
           </ul>
