--- a/gallery.html
+++ b/gallery.html
@@ -118,10 +118,26 @@
     
   </style>
 
-  <body>
+<body onload="loadfunc()">
+
+  <!-- loader -->
+  <div id="loader" class="load">
+   <div class="middle" id="middle">
+     <div class="bar bar1"></div>
+     <div class="bar bar2"></div>
+     <div class="bar bar3"></div>
+     <div class="bar bar4"></div>
+     <div class="bar bar5"></div>
+     <div class="bar bar6"></div>
+     <div class="bar bar7"></div>
+     <div class="bar bar8"></div>
+   </div>
+ </div>
+
+ 
     <!-- header -->
 
-    <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navba">
+    <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navbar">
       <div class="container-fluid text-white">
         <img src="assets/images/LOGO-removebg-preview.png" class="bg-white img-fluid rounded rounded-3" style="width: 50px;"  >
         <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
@@ -385,17 +401,11 @@ data-aos-duration="1500">
         </div>
         <ul class="list-inline text-white">
           <li class="list-inline-item"><a href="index.html">Home</a></li>
-          <li class="list-inline-item"><a href="index.html#about">About</a></li>
-          <li class="list-inline-item">
-            <a href="index.html#gallery">Gallery</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="ceriti.html">Certificate</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="index.html#Contact">Contact</a>
-          </li>
-        </ul>
+          <li class="list-inline-item"><a href="./About.html">About</a></li>
+          <li class="list-inline-item"><a href="./gallery.html">Gallery</a></li>
+          <li class="list-inline-item"><a href="ceriti.html">Certificate</a></li>
+          <li class="list-inline-item"><a href="index.html#Contact">Contact</a></li>
+      </ul>
         <p class="copyright">PRAMUKHEXIM © 2018</p>
       </footer>
     </div>
@@ -426,7 +436,7 @@ data-aos-duration="1500">
         nav.style.display = "block";
       };
     </script>
-
+<script src="loader.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
