--- a/ceriti.html
+++ b/ceriti.html
@@ -317,7 +317,7 @@ data-aos-duration="1500">
         var images = document.querySelectorAll(".myImg");
         var modalImg = document.getElementById("img01");
         var captionText = document.querySelector(".caption");
-        let nav = document.getElementById("navba")
+        let nav = document.getElementById("navbar")
         
         // Add click event listener to each image
         images.forEach(function(img) {
@@ -340,8 +340,8 @@ data-aos-duration="1500">
         }
     </script>
 
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="loader.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
   AOS.init();
 </script>
