--- a/index.html
+++ b/index.html
@@ -55,23 +55,24 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse  navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-link " aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="About.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle d-inline-block"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
                 Product
+                <i class= "fa-solid fa-angle-down d-inline-block"></i>
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#gallery">Fresh vegetabale</a></li>
@@ -222,7 +223,7 @@
 
 
        <!-- logo carousel-start -->
-<div class="logos bg-white mt-5 mb-5">
+<div class="logos container bg-white mt-5 mb-5">
   <div class="logos-slide">
     <img src="./assets/images/APEDA.png" />
     <img src="./assets/images/FSSAI.png" />
@@ -259,7 +260,7 @@
       </div>
    
       
-      <div id="myBtnContainer">
+      <div id="myBtnContainer" class="btn-togal">
         <button class="btn active" onclick="filterSelection('all')"> Show all</button>
         <button class="btn" onclick="filterSelection('nature')"> Vegetabale</button>
         <button class="btn" onclick="filterSelection('cars')">Fruits</button>
@@ -522,12 +523,12 @@
     <div class="container-fluid bg-black mb-0 m-0">
       <div class="row  text-white m-0">
           <div class="col-md-4 col-sm-12">
-              <div class="card cardcolor text-white border-0 ms-3" >
-                  <img src="assets/images/LOGO.jpg" class="p-4 img-fluid"  alt="...">
+              <div class="card cardcolor text-white  border-0 ms-3" >
+                  <img src="assets/images/LOGO.jpg" class="w-75 img-fluid mx-auto"  alt="...">
                   <div class="card-body">
                       <p class="card-text"> pramukh Exim.</p>
                     <h5 class="card-title fw-bolder h3">FOLLOW US</h5>
-                   <div class="d-flex pt-2 w-75">
+                   <div class="d-flex w-75">
                       <div class="rounded-circle h-25 w-25 facebook text-center ms-1 ">
                         <a href="" class="text-decoration-none text-white fw-bolder fs-3"><i class="fa-brands fa-facebook"></i></a>
                       </div>
