--- a/About.html
+++ b/About.html
@@ -72,6 +72,7 @@
                   aria-expanded="false"
                 >
                   Product
+                  <i class= "fa-solid fa-angle-down d-inline-block"></i>
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="index.html#gallery">Fresh vegetabale</a></li>
