--- a/ceriti.html
+++ b/ceriti.html
@@ -145,14 +145,15 @@
           </li>
           <li class="nav-item dropdown">
             <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Product
-            </a>
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Product
+            <i class= "fa-solid fa-angle-down d-inline-block"></i>
+          </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="index.html#gallery">Fresh vegetabale</a></li>
               <li><a class="dropdown-item" href="index.html#gallery">Fresh fruits</a></li>
