--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
           </div>
         </div>
 
-        <div class="col-lg-6" data-aos="fade-left"
+        <div class="col-lg-6" data-aos="fade-up"
         data-aos-easing="linear"
         data-aos-duration="1000">
           <form action="https://formsubmit.co/pramukhexim247@gmail.com" method="post" reset class="php-email-form">
