--- a/About.html
+++ b/About.html
@@ -61,7 +61,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="About.html">About</a>
+                <a class="nav-link active" href="About.html">About</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -185,7 +185,7 @@ data-aos-duration="1500">
               <div class="col d-flex align-items-center" data-aos="fade-lef" data-aos-delay="50"
           data-aos-duration="1500">
                 <div class="pera">
-                  <p class="font-monospace">
+                  <p class="">
                     To grow as a sustainable supplier of agricultural produce and food ensuring good agricultural practices, supply efficiency, quality production, efficient logistics and affordable price, all in environment friendly manner.
                   </p>
                 </div>
