--- a/ceriti.html
+++ b/ceriti.html
@@ -173,7 +173,7 @@
             <a class="nav-link" href="./gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ceriti.html">Certificate</a>
+            <a class="nav-link active" href="ceriti.html">Certificate</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html#Contact">Contact</a>
