--- a/gallery.html
+++ b/gallery.html
@@ -195,7 +195,7 @@
                   <a class="nav-link" href="#">Product</a>
                 </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="gallery.html">Gallery</a>
+              <a class="nav-link active" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="ceriti.html">Certificate</a>
